<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Workout Whiz</string>
    <string name="main_activity_title">orkout Whiz</string>
    <string name="action_settings">Settings</string>
    <string name="workout_button">Workout!</string>
    <string name="history_button">History</string>
    <string name="settings_button">Settings</string>
    <string name="title_activity_select_exercise">SelectExerciseActivity</string>
    <string name="number_pad_text_view">Enter number of reps for each set:</string>
    <string name="workout_title_text_view_default">Workout</string>
    <string name="add_exercise_button">+</string>
    <string name="end_workout_button">End Workout</string>
    <string name="create_exercise_text_view">Or create a new exercise:</string>
    <string name="create_exercise_edit_text_hint">New Exercise&#8230;</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="select_weight_title">Select A Weight For This Exercise</string>
    <string name="default_exercise_name">Untitled Exercise</string>
    <string name="default_exercise_intensity">25/8,8,8</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="exercise_title_text_view_default">Exercise</string>
    <string name="previous_rep_info_text_view">Last time you did:</string>
    <string name="default_previous_rep_count">0</string>
    <string name="current_rep_info_text_view">Now you\'ve done:</string>
    <string name="current_rep_count_text_view">0</string>
    <string name="next_set_button">Next Set!</string>
    <string name="finish_exercise_button">Finish Exercise!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="backspace">BS</string>
    <string name="completed_exercises_text_view">Complete Exercises:</string>
    <string name="incompleted_exercises_text_view">Incomplete Exercises:</string>
    <string name="create_new_workout_hint">Create New Workout&#8230;</string>
    <string name="select_workout_dialog_title">Select A Workout:</string>
    <string name="default_workout_name">Untitled Workout</string>
    <string name="default_workout_date">Date Unknown</string>
    <string name="weight_input_info_text">Tip: Move slider to max to increase weight beyond current limit.</string>
    <string name="exercise_options_perform">Perform</string>
    <string name="exercise_options_mark_as_incomplete">Mark As Incomplete</string>
    <string name="exercise_options_remove">Remove</string>
    <string name="title_activity_history">History Activity</string>
    <string name="workout_history_title_text_view">Workout History</string>
    <string name="export_workouts_button">Export</string>
    <string name="clear_workouts_button">Clear</string>
    <string name="erase_workout_button">Erase</string>
    <string name="favorite_workout_button">Favorite</string>
    <string name="perform_workout_button">Perform</string>
    <string name="workout_options_view_button">View</string>
    <string name="workout_options_perform_button">Perform</string>
    <string name="workout_options_favorite_button">Favorite</string>
    <string name="workout_options_erase_button">Erase</string>
    <string name="recent_workouts_list_view">Recent Workouts:</string>
    <string name="favorite_workouts_list_view">Favorite Workouts:</string>
    <string name="create_workout_subtitle">Or create a new workout:</string>
    <string name="empty_list_text">None&#8230;</string>


</resources>
