<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingRight="30dp"
    android:orientation="vertical" >
    
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/floating_layout_bg"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
    
	    <Button
	        android:id="@+id/workout_options_view_button"
	        android:text="@string/workout_options_view_button"
	        android:textSize="20sp"
	        style="@style/AppTheme.View.TextView.ExerciseOptions" />
	
	    <Button
	        android:id="@+id/workout_options_perform_button"
	        android:text="@string/workout_options_perform_button"
	        android:textSize="20sp"
	        style="@style/AppTheme.View.TextView.ExerciseOptions" />

	    <Button
	        android:id="@+id/workout_options_favorite_button"
	        android:text="@string/workout_options_favorite_button"
	        android:textSize="20sp"
	        style="@style/AppTheme.View.TextView.ExerciseOptions" />
	
	    <Button
	        android:id="@+id/workout_options_erase_button"
	        android:text="@string/workout_options_erase_button"
	        android:textSize="20sp"
	        style="@style/AppTheme.View.TextView.ExerciseOptions" />
        
    </LinearLayout>
    

</LinearLayout>