<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme.Layout"
    tools:context=".SelectExerciseActivity" >

    <!-- Title of the Workout -->
    <TextView
        android:id="@+id/workout_title_text_view"
        style="@style/AppTheme.View.TextView.Title"
        android:text="@string/workout_title_text_view_default" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

	    <!-- ScrollView that contains our list of available exercises. -->
	    <ScrollView
	        android:id="@+id/workout_exercise_scroll_view"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="14"
	        android:fillViewport="true"
	        android:gravity="center_horizontal"
	        android:layout_marginTop="10dp" >
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical" >
	
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="left"
	                android:text="@string/incompleted_exercises_text_view"
	                android:textSize="@dimen/list_view_dividers_text_size" />
	            
	            <!-- ListView of incomplete exercises -->
	            <ListView
	                android:id="@+id/incomplete_exercises_list_view"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:scrollbars="none" />
	            
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="left"
	                android:text="@string/completed_exercises_text_view"
	                android:textSize="@dimen/list_view_dividers_text_size" />
	
	            <!-- ListView of complete exercises -->
	            <ListView
	                android:id="@+id/complete_exercises_list_view"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:scrollbars="none" />
	
	        </LinearLayout>
	    </ScrollView>
	
	    <TextView
	        android:id="@+id/create_exercise_text_view"
	        style="@style/AppTheme.View.TextView.Subtitle"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:text="@string/create_exercise_text_view" />
	
	    <!-- Horizontal Linear Layout that allows us to add new exercises -->
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="2"
	        android:gravity="center"
	        android:orientation="horizontal" >
	
	        <EditText
	            android:id="@+id/add_exercise_edit_text"
	            style="@style/AppTheme.View.TextView.EditText"
	            android:inputType="text"
	            android:hint="@string/create_exercise_edit_text_hint"
	            android:gravity="left"
	            android:layout_width="0dp"
	            android:layout_weight="4"
	            android:layout_height="wrap_content"
	            android:ems="10" />
	
	        <Button
	            android:id="@+id/add_exercise_button"
	        	style="@style/AppTheme.View.TextView.Button.NumberPad"
	        	android:textSize="20sp"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:onClick="onAddExerciseButtonClicked"
	            android:text="@string/add_exercise_button" />
	
	    </LinearLayout>
	    
	    <!-- Button used to end the workout. -->
	    <LinearLayout
	        android:layout_width="fill_parent"
		    android:layout_height="0dp"
		    android:gravity="center"
		    android:layout_weight="2">
			<Button
			    android:id="@+id/end_workout_button"
		        style="@style/AppTheme.View.TextView.Button.Navigation"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:paddingLeft="50dp"
		        android:paddingRight="50dp"
			    android:onClick="onEndWorkoutButtonClicked"
			    android:text="@string/end_workout_button" />
	    </LinearLayout>

    </LinearLayout>
	    
</LinearLayout>